Opened 15 years ago
Closed 11 years ago
#6278 closed bug (fixed)
Shortcuts-based keyboard shortcuts don't work after install
Reported by: | darkwyrm | Owned by: | jessicah |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Shortcuts | Version: | R1/alpha2 |
Keywords: | Cc: | dsuden | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
After a fresh install, start Shortcuts, add a shortcut or two, and hit Save and Apply. The shortcuts will not work until after a reboot. Still a problem in hrev37415, but this bug has been around a long time.
Change History (7)
comment:1 by , 15 years ago
Component: | Preferences → Preferences/Shortcuts |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:3 by , 14 years ago
Let's close this, even though Axel suggested a better way it is indeed fixed since 39148.
comment:4 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
I've added a TODO in hrev44456 with Axel's recommendation, so I'm closing this.
comment:5 by , 11 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
comment:6 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | reopened → assigned |
Even with the TODO implemented (using BPathMonitor), the problem still remains.
comment:7 by , 11 years ago
Cc: | added |
---|---|
Resolution: | → fixed |
Status: | assigned → closed |
Fixed in hrev47508.
Note:
See TracTickets
for help on using tickets.
I will try to look at this in the next week or so since I want redo the Shortcuts GUI anyhow.